[metadata]
name = secomlint
version = attr: secomlint.__version__
author = Sofia Reis
author_email = sofiareis1994@gmail.com
description = A linter for security commit messages.
homepage = https://tqrg.github.io/secomlint/,
repository = https://github.com/TQRG/secomlint,
keywords = best practice, secom, secomlint, commit message, security, convention
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = MIT,
classifiers = 
    Topic :: Software Development
    Topic :: Software Development :: Version Control
    Programming Language :: Python
    Environment :: Console
    Intended Audience :: Developers

[options]
include_package_data = True
packages = find:
install_requires = 
    pandas
    spacy
    pyyaml

[options.packages.find]
exclude =
    docs*
    secomlint.tests*

[options.package_data]
secomlint = entities/patterns.jsonl, config/rules.yml

[options.entry_points]
console_scripts =
    secomlint = secomlint.__main__:main

